Fix: Manipulate club teaser image to avoid distortion.

--- a/src/components/components/club-teaser-list/club-teaser.scss
+++ b/src/components/components/club-teaser-list/club-teaser.scss
@@ -37,6 +37,7 @@
     height: 100%;
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
   }
 
   &__text {
